// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots appearance default 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              The placeholder 
            </span>
            <span
              data-css-5m5yd6=""
            >
              The placeholder 
            </span>
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots appearance default w/ error 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Problem field
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-utxo7p=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            />
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-loo18p=""
      >
        <div
          data-css-otejxm=""
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots appearance gaps 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-n53zhn=""
        >
          Problem field
        </div>
        <div
          data-css-1812rv9=""
        >
          <div
            data-css-1xm24a9=""
          >
            <div
              data-css-1r44zeb=""
            >
              <button
                data-css-8bndf1=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-e6fvyw=""
                />
                <span
                  data-css-5m5yd6=""
                />
              </button>
              <div
                data-css-cstzed=""
              >
                <div
                  data-css-otejxm=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.5 14L8 10h9z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-n53zhn=""
        >
          Problem field
        </div>
        <div
          data-css-1812rv9=""
        >
          <div
            data-css-utxo7p=""
          >
            <div
              data-css-1r44zeb=""
            >
              <button
                data-css-8bndf1=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-e6fvyw=""
                />
                <span
                  data-css-5m5yd6=""
                />
              </button>
              <div
                data-css-cstzed=""
              >
                <div
                  data-css-otejxm=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.5 14L8 10h9z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            data-css-loo18p=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-n53zhn=""
        >
          Problem field
        </div>
        <div
          data-css-1812rv9=""
        >
          <div
            data-css-1xm24a9=""
          >
            <div
              data-css-1r44zeb=""
            >
              <button
                data-css-1e7y5c2=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-e6fvyw=""
                />
                <span
                  data-css-5m5yd6=""
                />
              </button>
              <div
                data-css-145erv=""
              >
                <div
                  data-css-otejxm=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.5 14L8 10h9z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-n53zhn=""
        >
          Problem field
        </div>
        <div
          data-css-1812rv9=""
        >
          <div
            data-css-utxo7p=""
          >
            <div
              data-css-1r44zeb=""
            >
              <button
                data-css-1e7y5c2=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-e6fvyw=""
                />
                <span
                  data-css-5m5yd6=""
                />
              </button>
              <div
                data-css-145erv=""
              >
                <div
                  data-css-otejxm=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.5 14L8 10h9z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            data-css-loo18p=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="warning icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
                />
              </svg>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots appearance subtle 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-1e7y5c2=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              The placeholder 
            </span>
            <span
              data-css-5m5yd6=""
            >
              The placeholder 
            </span>
          </button>
          <div
            data-css-145erv=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots appearance subtle w/ error 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Problem field
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-utxo7p=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-1e7y5c2=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            />
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-145erv=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-loo18p=""
      >
        <div
          data-css-otejxm=""
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots disabled compare 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        Normal
      </div>
      <div
        data-css-1812rv9=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-1r44zeb=""
          >
            <button
              data-css-8bndf1=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-e6fvyw=""
              >
                I'm normal, see
              </span>
              <span
                data-css-5m5yd6=""
              >
                I'm normal, see
              </span>
            </button>
            <div
              data-css-cstzed=""
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Still normal
      </div>
    </label>
    <label
      data-css-1h53i33=""
      onKeyDown={[Function]}
    >
      <div
        data-css-n53zhn=""
      >
        I'm not usable
      </div>
      <div
        data-css-1812rv9=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-1r44zeb=""
          >
            <button
              data-css-8bndf1=""
              disabled={true}
              onClick={null}
            >
              <span
                aria-hidden={true}
                data-css-e6fvyw=""
              >
                I'm untouchable
              </span>
              <span
                data-css-5m5yd6=""
              >
                I'm untouchable
              </span>
            </button>
            <div
              data-css-cstzed=""
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Neither am I
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots focus autofocus with ref 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            />
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots focus disabled 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1h53i33=""
    onKeyDown={[Function]}
  >
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={true}
            onBlur={[Function]}
            onClick={null}
            onFocus={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            />
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots focus onBlur 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            />
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots focus onFocus 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
            onFocus={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            />
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots labels all 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Some label
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              Some placeholder
            </span>
            <span
              data-css-5m5yd6=""
            >
              Some placeholder
            </span>
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-1de0a6a=""
    >
      Some sublabel
    </div>
  </label>
</div>
`;

exports[`Storyshots labels label 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Some label
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            />
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots labels label and subLabel 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Some label
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            />
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-1de0a6a=""
    >
      Some sublabel
    </div>
  </label>
</div>
`;

exports[`Storyshots labels none 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            />
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots labels placeholder 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              some placeholder
            </span>
            <span
              data-css-5m5yd6=""
            >
              some placeholder
            </span>
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots labels subLabel 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            />
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-1de0a6a=""
    >
      Some sublabel
    </div>
  </label>
</div>
`;

exports[`Storyshots layouts full width 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
        "width": "500px",
      }
    }
  >
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        data-css-n53zhn=""
      >
        First
      </div>
      <div
        data-css-1812rv9=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-1r44zeb=""
          >
            <button
              data-css-8bndf1=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-e6fvyw=""
              />
              <span
                data-css-5m5yd6=""
              />
            </button>
            <div
              data-css-cstzed=""
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        data-css-n53zhn=""
      >
        Second
      </div>
      <div
        data-css-1812rv9=""
      >
        <div
          data-css-utxo7p=""
        >
          <div
            data-css-1r44zeb=""
          >
            <button
              data-css-8bndf1=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-e6fvyw=""
              />
              <span
                data-css-5m5yd6=""
              />
            </button>
            <div
              data-css-cstzed=""
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          data-css-loo18p=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        data-css-n53zhn=""
      >
        Third
      </div>
      <div
        data-css-1812rv9=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-1r44zeb=""
          >
            <button
              data-css-1e7y5c2=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-e6fvyw=""
              />
              <span
                data-css-5m5yd6=""
              />
            </button>
            <div
              data-css-145erv=""
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
      style={
        Object {
          "display": "block",
          "width": "100%",
        }
      }
    >
      <div
        data-css-n53zhn=""
      >
        Fourth
      </div>
      <div
        data-css-1812rv9=""
      >
        <div
          data-css-utxo7p=""
        >
          <div
            data-css-1r44zeb=""
          >
            <button
              data-css-1e7y5c2=""
              disabled={false}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-e6fvyw=""
              />
              <span
                data-css-5m5yd6=""
              />
            </button>
            <div
              data-css-145erv=""
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          data-css-loo18p=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots layouts right-aligned 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    style={
      Object {
        "border": "1px solid blue",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-1812rv9=""
        >
          <div
            data-css-1xm24a9=""
          >
            <div
              data-css-1r44zeb=""
            >
              <button
                data-css-1e7y5c2=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-e6fvyw=""
                >
                  Filter
                </span>
                <span
                  data-css-5m5yd6=""
                >
                  Filter
                </span>
              </button>
              <div
                data-css-145erv=""
              >
                <div
                  data-css-otejxm=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.5 14L8 10h9z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div
      style={
        Object {
          "border": "3px solid green",
          "height": "50px",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots menu divider 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Level
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu in stack 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-n53zhn=""
        >
          Level
        </div>
        <div
          data-css-1812rv9=""
        >
          <div
            data-css-1xm24a9=""
          >
            <div
              data-css-1r44zeb=""
            >
              <button
                data-css-8bndf1=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-e6fvyw=""
                >
                  Three and the amazing item
                </span>
                <span
                  data-css-5m5yd6=""
                >
                  Select one
                </span>
              </button>
              <div
                data-css-cstzed=""
              >
                <div
                  data-css-otejxm=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.5 14L8 10h9z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
    <div>
      <label
        data-css-1hniuff=""
        onKeyDown={[Function]}
      >
        <div
          data-css-n53zhn=""
        >
          Level
        </div>
        <div
          data-css-1812rv9=""
        >
          <div
            data-css-1xm24a9=""
          >
            <div
              data-css-1r44zeb=""
            >
              <button
                data-css-8bndf1=""
                disabled={false}
                onClick={[Function]}
              >
                <span
                  aria-hidden={true}
                  data-css-e6fvyw=""
                >
                  Three and the amazing item
                </span>
                <span
                  data-css-5m5yd6=""
                >
                  Select another one
                </span>
              </button>
              <div
                data-css-cstzed=""
              >
                <div
                  data-css-otejxm=""
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12.5 14L8 10h9z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots menu nested 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Level
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-5m5yd6=""
            >
              Select another one
            </span>
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu onClicks 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Level
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-utxo7p=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-1e7y5c2=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-5m5yd6=""
            >
              Select another one
            </span>
          </button>
          <div
            data-css-145erv=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        data-css-loo18p=""
      >
        <div
          data-css-otejxm=""
        >
          <svg
            aria-label="warning icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
            />
          </svg>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu single list 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Level
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu single list w/ icon 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Level
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-5m5yd6=""
            >
              Select one
            </span>
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu super long 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Level
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              This level really is the longest level that anyone has ever seen. There is none longer
            </span>
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu w/ longer nested menu item label 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Level
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              The longest in el mundo. Find me!
            </span>
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu w/ longer placeholder 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Level
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              This one is longer than any menu item
            </span>
            <span
              data-css-5m5yd6=""
            >
              This one is longer than any menu item
            </span>
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots menu w/ subLabel 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Level
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              Three and the amazing item
            </span>
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-1de0a6a=""
    >
      The course level
    </div>
  </label>
</div>
`;

exports[`Storyshots placeholder as pre-selected item 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              Three item
            </span>
            <span
              data-css-5m5yd6=""
            >
              Two item
            </span>
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots props whitelist title 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-n53zhn=""
    >
      Level
    </div>
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            onClick={[Function]}
            title="This title should be present"
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              One item
            </span>
            <span
              data-css-5m5yd6=""
            />
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots whitelist name 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <label
    data-css-1hniuff=""
    onKeyDown={[Function]}
  >
    <div
      data-css-1812rv9=""
    >
      <div
        data-css-1xm24a9=""
      >
        <div
          data-css-1r44zeb=""
        >
          <button
            data-css-8bndf1=""
            disabled={false}
            name="myFieldNameOfPower"
            onClick={[Function]}
          >
            <span
              aria-hidden={true}
              data-css-e6fvyw=""
            >
              I have a form name
            </span>
            <span
              data-css-5m5yd6=""
            >
              I have a form name
            </span>
          </button>
          <div
            data-css-cstzed=""
          >
            <div
              data-css-otejxm=""
            >
              <svg
                aria-label="caret down icon"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.5 14L8 10h9z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </label>
</div>
`;

exports[`Storyshots whitelist onChange 1`] = `
<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div>
    <div
      style={
        Object {
          "color": "#ababab",
        }
      }
    >
      Value: 
      one
    </div>
    <label
      data-css-1hniuff=""
      onKeyDown={[Function]}
    >
      <div
        data-css-1812rv9=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-1r44zeb=""
          >
            <button
              data-css-8bndf1=""
              disabled={false}
              onChange={[Function]}
              onClick={[Function]}
            >
              <span
                aria-hidden={true}
                data-css-e6fvyw=""
              >
                Three item
              </span>
              <span
                data-css-5m5yd6=""
              >
                Change me
              </span>
            </button>
            <div
              data-css-cstzed=""
            >
              <div
                data-css-otejxm=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.5 14L8 10h9z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
